--- a/src/app/tasks-dashboard/task-dialog.component.scss
+++ b/src/app/tasks-dashboard/task-dialog.component.scss
@@ -8,6 +8,15 @@
     font-weight: normal;
   }
   .status {}
+  .TODO {
+    color: red;
+  }
+  .IN_PROGRESS {
+    color: rgb(199, 199, 90);
+  }
+  .DONE {
+    color: green;
+  }
   .owner {
     font-size: 80%;
     color: #666;
@@ -15,6 +24,28 @@
   .dates {
     font-size: 80%;
     color: #666;
+  }
+
+  .activities-list {
+    padding: 5px 0;
+    margin: 0;
+    background: #f9f9f9;
+    gap: 10px;
+    .activity-item {
+      gap: 10px;
+      padding: 5px;
+      background-color: #fff;
+      border-radius: 5px;
+      .activity-title {
+        color: #000;
+      }
+    }
+  }
+  .activity-add {
+    margin-top: 5px;
+  }
+  .activity-user {
+    border-radius: 30%;
   }
 }
 .close {
